# mmec_fab

./: README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py
docker/: docker-compose.yaml  real.env
docker/irc5-service-port/: docker-compose.yaml
docker/virtual-controller/: docker-compose.yaml
examples/: create.json  pick_place_from_geo_and_json_creation.ghx  pick_place_from_json.py  pp_frames.json  pp_frames_is.json
src/compas_mmec_fab_plugin/: __init__.py
src/mmec_fab/: __init__.py  rhino_install.py  robot_client.py  utils.py
