[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.autopep8]
max-line-length = 88

[tool.isort]
profile = "black"
force_single_line = true
known_first_party = "mmec_fab"
known_third_party = "compas,compas_fab,compas_rrc,Rhino"
default_section = "THIRDPARTY"
add_imports = "__future__.absolute_import,__future__.division,__future__.print_function"
skip = "_version.py"

[tool.black]
target-version = ['py27']
