[metadata]
name = mmec_fab
version = 0.0.1

[options]
package_dir =
    =src
packages=find:
zip_safe = False
include_package_data = True
install_requires =
    compas_fab~=0.17
    compas_rrc >=1.0.0, <=1.1.0
python_requires = >=3.7

[options.packages.find]
where=src

[options.extras_require]
dev =
    black >= 20.8b1
    flake8
    isort >= 5.6.4
    mypy >= 0.790

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 88
extend-ignore = E203
